# microccf-spike

./: .gitignore  Cargo.toml  LICENSE  README.md  SPIKE_REPORT.md
deploy/: config.example.toml  install.sh  microccf.service  uninstall.sh
docs/: endpoint-catalog.md
scripts/: benchmark-latency.sh  cross-compile.sh  deploy-and-run.sh
src/: config.rs  error.rs  loop_runner.rs  main.rs  seed_client.rs  server.rs  state.rs
tests/: no_canonical_ccf.rs
